# RP2040-Zero_uart_ps3

./: CMakeLists.txt  LICENSE  README.md  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
